--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.7.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
     "react-helmet": "^5.2.1",
     "react-overdrive": "0.0.10",
-    "react-router-dom": "^5.1.0",
-    "react-scripts": "3.1.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.2.0",
     "styled-components": "^4.4.0"
   },
   "scripts": {
@@ -20,7 +20,7 @@
   },
   "devDependencies": {
     "dotenv": "^6.2.0",
-    "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react": "^7.16.0",
     "prettier": "^1.18.2",
     "react-testing-library": "^5.9.0"
   },
